<resources>
    <string name="app_name">Scorepal</string>
    <string name="scorepalFile">Scorepal Match</string>
    <string name="file_provider_authority" translatable="false">uk.co.darkerwaters.scorepal</string>
    <string name="login_name_button">Use Name</string>
    <string name="name_use_warning">Using just your name will keep score etc but will limit the use of advanced features including backup and storage of your match history.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_main_history">History</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_record">Play Match</string>
    <string name="notification_title">Scorepal</string>
    <string name="notification_message">Scorepal service is started</string>
    <string name="ticker_text">tick tick tick tick tick tock tick tick</string>
    <string name="title_tennis">Tennis</string>
    <string name="title_squash">Squash</string>
    <string name="title_pingpong">Ping Pong</string>
    <string name="title_badminton">Badminton</string>
    <string name="title_one_set">1 Set</string>
    <string name="title_three_sets">3 Sets</string>
    <string name="title_five_sets">5 Sets</string>
    <string name="title_singles">Singles</string>
    <string name="title_doubles">Doubles</string>
    <string name="title_teamOne">Team One</string>
    <string name="title_teamTwo">Team Two</string>
    <string name="title_playerOne">Player One</string>
    <string name="title_playerTwo">Player Two</string>
    <string name="title_partnerOne">Partner One</string>
    <string name="title_partnerTwo">Partner Two</string>
    <string name="titleAdvanced">Advanced</string>
    <string name="title_games_four">4 Games</string>
    <string name="title_games_six">6 Games</string>
    <string name="title_games_per_set">Games per set</string>
    <string name="title_deuce_sudden_death">Sudden death on deuce</string>
    <string name="title_final_set_tie">Tie-break in final set</string>
    <string name="title_deuce_sudden_death_button">Deuce</string>
    <string name="title_final_set_tie_button">Final Tie</string>
    <string name="cycle_server_button">Change Server</string>
    <string name="cycle_naming_button">Change Naming Style</string>
    <string name="ramdom_server_button">Random Server</string>
    <string name="title_play">Play</string>
    <string name="title_setup">App Settings</string>
    <string name="title_history">History</string>
    <string name="exitConfirmTitle">Cancel Match?</string>
    <string name="exitConfirmDetail">Are you sure, this will cancel the running match?</string>
    <string name="exitMainConfirmDetail">Are you sure, this will exit Scorepal?</string>
    <string name="title_settings">Settings</string>
    <string name="title_settings_general">General</string>
    <string name="title_settings_controls">Controls</string>
    <string name="title_settings_sounds">Sounds</string>
    <string name="points">Points</string>
    <string name="sets">Sets</string>
    <string name="games">Games</string>
    <string name="rounds">Rounds</string>
    <string name="server">Server</string>
    <string name="receiver">Receiver</string>
    <string name="singles">Singles</string>
    <string name="doubles">Doubles</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="speak_all">all</string>
    <string name="speak_number_all">%1$d %2$s all</string>
    <string name="display_zero"> 0</string>
    <string name="speak_zero">zero</string>
    <string name="speak_zeros">zeros</string>
    <string name="speak_zero_all">zero all</string>
    <string name="display_love"> 0</string>
    <string name="speak_love">love</string>
    <string name="speak_love_all">love all</string>
    <string name="display_15">15</string>
    <string name="speak_15">fifteen</string>
    <string name="speak_15_all">fifteen all</string>
    <string name="display_30">30</string>
    <string name="speak_30">thirty</string>
    <string name="speak_30_all">thirty all</string>
    <string name="display_40">40</string>
    <string name="speak_40">forty</string>
    <string name="display_advantage">AD</string>
    <string name="speak_advantage">advantage</string>
    <string name="display_deuce">40</string>
    <string name="speak_deuce">deuce</string>
    <string name="display_game">game</string>
    <string name="speak_game">game</string>
    <string name="display_set">set</string>
    <string name="display_round">round</string>
    <string name="speak_set">set</string>
    <string name="speak_round">round</string>
    <string name="display_match">match</string>
    <string name="speak_match">match</string>
    <string name="speak_expedite_system">Expedite System to commence…</string>
    <string name="action_nothing">No action</string>
    <string name="action_ptServer">Point Server</string>
    <string name="action_ptReceiver">Point Receiver</string>
    <string name="action_ptTeamOne">Point Team 1</string>
    <string name="action_ptTeamTwo">Point Team 2</string>
    <string name="action_ptUndo">Undo Last Point</string>
    <string name="action_ptAnnounce">Announce Points</string>
    <string name="action_nothing_short">No action</string>
    <string name="action_ptServer_short">Server</string>
    <string name="action_ptReceiver_short">Receiver</string>
    <string name="action_ptTeamOne_short">Team 1</string>
    <string name="action_ptTeamTwo_short">Team 2</string>
    <string name="action_ptUndo_short">Undo</string>
    <string name="action_ptAnnounce_short">Announce</string>
    <string name="speak_no_score">Game not started</string>
    <string name="speak_sets">Sets</string>
    <string name="speak_games">Games</string>
    <string name="speak_point">Point</string>
    <string name="speak_points">Points</string>
    <string name="speak_rounds">Rounds</string>
    <string name="tennis_serve">Serving tennis player</string>
    <string name="tennis_receive">Receiving tennis player</string>
    <string name="tennisSubtitle">Play sets / games / points</string>
    <string name="pingPongSubtitle">Play points and rounds</string>
    <string name="badmintonSubtitle">Play points and games</string>
    <string name="contact">The contact</string>
    <string name="sport">The sport to score</string>
    <string name="play_sport">Resume or play this match</string>
    <string name="history">Show the history of your matches</string>
    <string name="trash">Show the trash</string>
    <string name="undo">Undo the last point recorded</string>
    <string name="delete">Delete this match</string>
    <string name="restore_match">Restore this match to the main screen</string>
    <string name="stats">A detailed breakdown of your matches by opponent and sport</string>
    <string name="previous_sets">Previous Sets</string>
    <string name="tie_example">(7–5)</string>
    <string name="time">Time</string>
    <string name="match">Match</string>
    <string name="loading_match_details">Loading Match Details…</string>
    <string name="time_separator">.</string>
    <string name="opponent_summary">Against %1$s you have won %2$d matches and lost %3$d.</string>
    <string name="matches_played">%1$d matches played</string>
    <string name="recent_summary">In the past %1$d days, you have played %2$d matches; winning %3$d and losing %4$d.</string>
    <string name="date_played">%1$s %2$s</string>
    <string name="break_points_converted">%1$d / %2$d</string>
    <string name="title_statistics">Activity in last 30 days</string>
    <string name="statistics_recorded">Recorded.</string>
    <string name="statistics_wins">Wins</string>
    <string name="statistics_losses">Losses</string>
    <string name="btn_more">More…</string>
    <string name="btn_hide">Hide</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_less">Less…</string>
    <string name="total_points">Total points</string>
    <string name="break_points">Break points</string>
    <string name="btn_share">Share</string>
    <string name="resume_match">Resume</string>
    <string name="btn_accept">Accept Results</string>
    <string name="match_momentum">Momentum Analysis</string>
    <string name="showMatchMomentum">Show graph</string>
    <string name="recent_momentum">Recent Point Momentum</string>
    <string name="change_ends">Change Ends…</string>
    <string name="change_server">Change Server…</string>
    <string name="change_server_server">%1$s to serve...</string>
    <string name="match_over">Match Over</string>
    <string name="match_completed">Match Completed</string>
    <string name="at">at</string>
    <string name="default_final_set_target">6 – 6</string>
    <string name="default_games">6</string>
    <string name="deciding_point">Deciding Point…</string>
    <string name="tie_break">Tie Break…</string>
    <string name="break_point">Break Point…</string>
    <string name="tie_display">(%1$d-%2$d)</string>
    <string name="correction">Correction…</string>
    <string name="results">Results</string>
    <string name="scoreSummaryLevel">Level %1$d</string>
    <string name="scoreSummaryOneLine">%1$s %3$s — %4$s %2$s</string>
    <string name="match_description_long">%1$s %2$s %3$s\nLasting %4$s:%5$s minutes\nPlayed at %6$s on %7$s.</string>
    <string name="tennis_description_long">%4$d Set Tennis Match\n%1$s %2$s %3$s\nPlayed %5$s:%6$s minutes, at %7$s on %8$s.</string>
    <string name="ping_pong_description_long">%4$d Round Ping-Pong Match\n%1$s %2$s %3$s\nPlayed %5$s:%6$s minutes, at %7$s on %8$s.</string>
    <string name="badminton_description_long">%4$d Game Badminton Match\n%1$s %2$s %3$s\nPlayed %5$s:%6$s minutes, at %7$s on %8$s.</string>
    <string name="match_description">Lasting %1$s:%2$s minutes\nPlayed at %3$s on %4$s.</string>
    <string name="tennis_description">%1$d Set Tennis Match\nPlayed %2$s:%3$s minutes, at %4$s on %5$s.</string>
    <string name="ping_pong_description">%1$d Round Ping-Pong Match\nPlayed %2$s:%3$s minutes, at %4$s on %5$s.</string>
    <string name="badminton_description">%1$d Game Badminton Match\nPlayed %2$s:%3$s minutes, at %4$s on %5$s.</string>
    <string name="tennis_short_description">%1$d Set Tennis Match.</string>
    <string name="ping_pong_short_description">%1$d Round Ping-Pong Match.</string>
    <string name="badminton_short_description">%1$d Game Badminton Match.</string>
    <string name="match_beat">beat</string>
    <string name="match_beating">beating</string>
    <string name="titleAccount">Account</string>
    <string name="titleLastMatch">Recent Matches</string>
    <string name="usernamePlaceholder">Username here</string>
    <string name="emailPlaceholder">username@gmail.com</string>
    <string name="buttonLogout">Change</string>
    <string name="currentLoginGoogle">You are currently logged in using your Google account so you have access to everything, including backup of your score history.</string>
    <string name="currentLoginNameOnly">You are currently logged in using your name only so you cannot backup your data or see an image. Consider logging in using your Google account instead.</string>
    <string name="titlePermissions">Permissions</string>
    <string name="permissionTitleLocations">Store Locations</string>
    <string name="permissionExplainLocation">Store the location at which each match was played.</string>
    <string name="permissionTitleContacts">Use Contacts</string>
    <string name="soundAnnounceScore">Score</string>
    <string name="speakingExplain">These names are used to display and speak the score as you play, you can choose how they are displayed and spoken from a range of options.</string>
</resources>