<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/teamImage"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:tint="@color/primaryDarkColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_sports_tennisplay_black_24dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/teamImage"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/matchHistoryTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="SUN 7. 07:54"
            android:textColor="@color/primaryDarkColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageViewWinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:tint="@color/primaryDarkColor"
        app:layout_constraintStart_toEndOf="@+id/teamImage"
        app:layout_constraintTop_toBottomOf="@+id/titleLayout"
        app:srcCompat="@drawable/ic_trophy_black_24dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutTitles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewWinner"
        app:layout_constraintTop_toTopOf="@+id/imageViewWinner">

        <TextView
            android:id="@+id/matchWinnerTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/title_teamOne"
            android:textAlignment="textEnd"
            android:textColor="@color/primaryDarkColor"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/beatTextView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    
        <TextView
            android:id="@+id/beatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/match_beat"
            android:textColor="@color/primaryDarkColor"
            app:layout_constraintEnd_toStartOf="@+id/matchLoserTitle"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/matchWinnerTitle"
            app:layout_constraintTop_toTopOf="@+id/matchWinnerTitle" />
    
        <TextView
            android:id="@+id/matchLoserTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/title_teamTwo"
            android:textColor="@color/primaryDarkColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/beatTextView"
            app:layout_constraintTop_toTopOf="@+id/beatTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutScores"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewWinner"
        app:layout_constraintTop_toBottomOf="@+id/layoutTitles">

        <TextView
            android:id="@+id/matchWinnerScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/five"
            android:textAlignment="textEnd"
            android:textColor="@color/primaryDarkColor"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/matchPlayedLevel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/matchPlayedLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points"
            android:textColor="@color/primaryDarkColor"
            app:layout_constraintEnd_toStartOf="@+id/matchLoserScore"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/matchWinnerScore"
            app:layout_constraintTop_toTopOf="@+id/matchWinnerScore" />

        <TextView
            android:id="@+id/matchLoserScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/six"
            android:textColor="@color/primaryDarkColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/matchPlayedLevel"
            app:layout_constraintTop_toTopOf="@+id/matchPlayedLevel" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>